Ajuste ba tela de login

--- a/SefinWeb/SiafiWeb/web/WEB-INF/componentes/cabecalhoJsf.xhtml
+++ b/SefinWeb/SiafiWeb/web/WEB-INF/componentes/cabecalhoJsf.xhtml
@@ -10,7 +10,7 @@
         <h:graphicImage url="/resources/imagens/logo.png" width="45" height="45" style="margin: 0px 0px 0px 5px;"/>
         <!--        <h:graphicImage url="/resources/imagens/nome-logo.png" width="150" height="50" style="margin-top: 5px;margin-left: 10px;margin-bottom: 15px;" rendered="false"/>-->
         <svg width="500px" height="40px" >
-            <text style="fill: #FFF;font-size: 18px;font-weight: bold;" x="0" y="25">SIAF - Sistema de Administração Financeira</text>
+            <text style="color: #FFF;font-size: 18px;font-weight: bold;" x="0" y="25">SIAF - Sistema de Administração Financeira</text>
         </svg>
 
         <h:graphicImage url="/resources/imagens/logo-caucaia.png" width="150" height="50" style="margin: 0px 5px 0px 0px;float: right;"/>
