--- a/SefinWeb/SiafiWeb/web/modelo/frmModLogin.xhtml
+++ b/SefinWeb/SiafiWeb/web/modelo/frmModLogin.xhtml
@@ -36,7 +36,7 @@
 
                 <div class="container panel  center-block" style="padding-top: 50px;padding-bottom: 20px;background: #e6e6e6">
                     <div class="row center-block" style="margin-left: 170px" >
-                        <div class="panel panel-danger col-lg-12 gradiente" style="width: 400px;">
+                        <div class="panel panel-danger col-lg-12 gradiente" style="width: 400px;height: 391px">
 
                             <div style="margin-top: 10px" >
                                 <h3 class="text-left panel-title" style="font-weight: bold;font-family: Aril,sans-serif">Seja bem-vindo(a)</h3>
@@ -50,10 +50,10 @@
                             </div>
                             <form  style="margin-top: -30px " class="form enterapi" id="captcha-form" name="frm" role="form" method="POST" action="j_spring_security_check">
 
-                                <h:outputText value="Usuário ou senha incorretos!" rendered="#{param.erro}" style="color: darkred"/>
 
                                 <div class="panel-body">
                                     <div class="form-group">
+                                        <h:outputText value="Usuário ou senha incorretos!" rendered="#{param.erro}" style="color: red;font-weight: bold"/>
 
                                         <div   >
                                             <label  class="control-label" for="j_username">Documento </label>
@@ -68,12 +68,12 @@
                                             <div id="captcha-wrap"  >
 
                                                 <div class="row "   >
-                                                    <div class="col-lg-5 " >
-                                                        <button class="btn btn-default form-control back" style="cursor: pointer;" type="button" onclick="atualizaCapcha();">
+                                                    <div class="col-lg-3 " >
+                                                        <button class="btn btn-default form-control" style="cursor: pointer;" type="button" onclick="atualizaCapcha();">
                                                             <span class="glyphicon glyphicon-refresh"></span>
                                                         </button>
                                                     </div>
-                                                    <div class="col-lg-5">
+                                                    <div class="col-lg-3">
                                                         <canvas id="txt" class="imgcod " width="100" height="30"></canvas>
                                                     </div>
 
@@ -90,7 +90,7 @@
 
                             </form>
                         </div>
-                        <div class="panel  gradiente col-lg-5" style="width: 400px;height: 374px">
+                        <div class="panel  gradiente col-lg-5" style="width: 400px;height: 391px">
                             <div class="center-block"  style="margin-top: 130px;margin-left: 100px;">
                                 <img  src="resources/imagens/logo.png" width="50" height="45"  />
                                 <img  src="resources/imagens/brasao_pref.png"   />
